bin_PROGRAMS = biome1

biome1_SOURCES =        \
  overprint.c           \
  common_vars.f90       \
  netcdf_error.f90      \
  esatdesdT.f90         \
  coordsmod.f90         \
  read_data.f90         \
  airmass.f90           \
  daily.f90             \
  daily_insolation.f90  \
  netrad_pet.f90        \
  orbit.f90             \
  crop_suit.f90         \
  surfrad.f90           \
  aet_alpha.f90         \
  rad_and_pet.f90       \
  biome1mod.f90         \
  biome1driver.f90

clean-local:
	rm -r -f *.mod *.dSYM
